[gd_scene load_steps=15 format=3 uid="uid://beqa2jii05ekd"]

[ext_resource type="Script" path="res://app/main-menu/main_menu.gd" id="1_ilhsy"]
[ext_resource type="PackedScene" uid="uid://desy7wwqh5j8x" path="res://ui/game-ui/game-header.tscn" id="2_ej781"]
[ext_resource type="PackedScene" uid="uid://d0mwa7opmiho0" path="res://app/main-menu/select-player/select-player.tscn" id="2_eo256"]
[ext_resource type="Texture2D" uid="uid://c1y4vo4v811qp" path="res://app/main-menu/background.png" id="2_sh3lm"]
[ext_resource type="PackedScene" uid="uid://d1exnpsw62d4q" path="res://app/main-menu/select-mission/select-mission.tscn" id="2_w05gh"]
[ext_resource type="Shader" path="res://app/main-menu/main-menu.gdshader" id="2_xpbev"]
[ext_resource type="PackedScene" uid="uid://l4g7jgfosw2v" path="res://ui/game-ui/game-button.tscn" id="3_u8p1n"]
[ext_resource type="Theme" uid="uid://g3jsuxjubnsj" path="res://common/theme.tres" id="4_8damn"]
[ext_resource type="PackedScene" uid="uid://lpuqutgh2h0y" path="res://app/main-menu/select-difficulty/select-difficulty.tscn" id="4_qcdqa"]
[ext_resource type="PackedScene" uid="uid://d1q1oo6dpavt8" path="res://ui/game-ui/game-panel.tscn" id="6_7kr4e"]
[ext_resource type="PackedScene" uid="uid://bnxude3glaqa5" path="res://app/main-menu/show-controls/show-controls.tscn" id="8_olo7c"]
[ext_resource type="PackedScene" uid="uid://dhfywm5mrjx77" path="res://app/main-menu/select-player-weapon/select-player-weapon.tscn" id="10_7n7ka"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_atguf"]
shader = ExtResource("2_xpbev")
shader_parameter/radius = 4.0

[sub_resource type="Curve2D" id="Curve2D_6g3qa"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -235, -82, 0, 0, 0, 0, -536, -156, 0, 0, 0, 0, -455, -387, 0, 0, 0, 0, -184, -419, 0, 0, 0, 0, -77, -282, 0, 0, 0, 0, -13, -108, 0, 0, 0, 0, -235, -82)
}
point_count = 7

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_ilhsy")

[node name="Background" type="Node2D" parent="."]

[node name="Image" type="TextureRect" parent="Background"]
texture_filter = 6
material = SubResource("ShaderMaterial_atguf")
offset_right = 1730.0
offset_bottom = 1174.0
texture = ExtResource("2_sh3lm")

[node name="Path" type="Path2D" parent="Background"]
curve = SubResource("Curve2D_6g3qa")

[node name="Follow" type="PathFollow2D" parent="Background/Path"]
position = Vector2(-235, -82)
rotation = -2.90053

[node name="MoveBackground" type="Timer" parent="Background"]
wait_time = 0.1
autostart = true

[node name="Main" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -183.0
offset_top = -199.5
offset_right = 183.0
offset_bottom = 199.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_8damn")

[node name="Header" parent="Main" instance=ExtResource("2_ej781")]
custom_minimum_size = Vector2(700, 140)
layout_mode = 2
label = "BestCat - The Game"
font_size = 50

[node name="Commands" parent="Main" instance=ExtResource("6_7kr4e")]
layout_mode = 2
size_flags_horizontal = 4

[node name="Margin" type="MarginContainer" parent="Main/Commands"]
layout_mode = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="Layout" type="VBoxContainer" parent="Main/Commands/Margin"]
layout_mode = 2

[node name="NewGame" parent="Main/Commands/Margin/Layout" instance=ExtResource("3_u8p1n")]
custom_minimum_size = Vector2(272, 94)
layout_mode = 2
label = "New Game"
font_size = 38

[node name="Controls" parent="Main/Commands/Margin/Layout" instance=ExtResource("3_u8p1n")]
custom_minimum_size = Vector2(245, 94)
layout_mode = 2
label = "Controls"
font_size = 38

[node name="Quit" parent="Main/Commands/Margin/Layout" instance=ExtResource("3_u8p1n")]
custom_minimum_size = Vector2(74, 50)
layout_mode = 2
label = "Quit"
font_size = 38

[node name="SelectMission" parent="." instance=ExtResource("2_w05gh")]
visible = false
anchors_preset = 13

[node name="SelectPlayer" parent="." instance=ExtResource("2_eo256")]
visible = false

[node name="SelectPlayerWeapon" parent="." instance=ExtResource("10_7n7ka")]
visible = false

[node name="SelectDifficulty" parent="." instance=ExtResource("4_qcdqa")]
visible = false

[node name="ShowControls" parent="." instance=ExtResource("8_olo7c")]
visible = false
anchors_preset = 13
offset_left = -250.0
offset_right = 250.0

[connection signal="timeout" from="Background/MoveBackground" to="." method="_background_move"]
[connection signal="button_up" from="Main/Commands/Margin/Layout/NewGame" to="." method="_main_go_to_select_mission"]
[connection signal="button_up" from="Main/Commands/Margin/Layout/Controls" to="." method="_main_to_controls"]
[connection signal="button_up" from="Main/Commands/Margin/Layout/Quit" to="." method="_main_go_to_quit_game"]
[connection signal="mission_selected" from="SelectMission" to="." method="_select_mission_go_to_select_player"]
[connection signal="return_from" from="SelectMission" to="." method="_select_mission_to_main"]
[connection signal="player_selected" from="SelectPlayer" to="." method="_select_player_go_to_select_player_weapon"]
[connection signal="return_from" from="SelectPlayer" to="." method="_select_player_go_to_select_mission"]
[connection signal="player_weapon_selected" from="SelectPlayerWeapon" to="." method="_select_player_weapon_go_to_select_difficulty"]
[connection signal="return_from" from="SelectPlayerWeapon" to="." method="_select_player_weapon_go_to_select_player"]
[connection signal="difficulty_selected" from="SelectDifficulty" to="." method="_select_difficulty_go_to_new_game"]
[connection signal="return_from" from="SelectDifficulty" to="." method="_select_difficulty_go_to_select_player_weapon"]
[connection signal="return_from" from="ShowControls" to="." method="_controls_to_main"]
